--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "color.js": "^1.2.0",
+    "extract-colors": "^4.1.1",
+    "get-average-color": "^0.0.6",
+    "get-pixels": "^3.3.3",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-native-image-colors": "^2.4.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.1",
