--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.4.4",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-native-image-colors": "^2.4.0",
